new array adding

--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -160,7 +160,7 @@ function path_update(new_path) {
     if (data == null) { alert("Data recieved was empty"); }
     //combine current path and new expansion
     path[path.length-1].id = data.graph.id; //make sure id of last node in path is correct
-
+/*
     if (path.length > 1) {
       root = path[path.length-2];
       root.children = [data.graph];
@@ -172,6 +172,29 @@ function path_update(new_path) {
     } else {
       root = data.graph;
     }
+*/
+    if (last.id == root.id) {
+      root.children = [data.graph.children];
+    } else {
+      var tempnode = root,
+          found = false;
+      while (tempnode.children.length != 0) {
+        for (var i=0; i<tempnode.children.length; i+=1) {
+          if (tempnode.children[i].id == last.id) {
+            tempnode.children[i].children = [data.graph.children];
+            tempnode.children = [tempnode.children[i]];
+            found = true;
+            break;
+          }
+        }
+        if (found) { break; }
+        tempnode = tempnode.children[0]
+      }
+      if (!found) { alert("NODE NOT FOUND"); }
+      console.log("NODES AFTER COMBINING!!!!")
+      console.log(tempnode);
+    }
+
     details = data.details;
     console.log(root);
     console.log(details);
