--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -51,11 +51,9 @@ var w = 960,
 var force = d3.layout.force() 
     .on("tick", tick)
     .size([w, h])
-    //.gravity(0.1)
-    //.charge(-2000)
-    //.linkDistance(50)
-    //.linkStrength(0.1);
-    //.linkDistance(100)
+    .gravity(0.1)
+    .charge(-1000)
+    .linkDistance(100);
     //.charge(-1000)
     //.linkStrength(function(d) { 
     //  for (var i=0; i<path.length; i+=1) {
@@ -116,6 +114,7 @@ function person_category_callback(root,details) {
 
 
 function path_update(new_path) {
+  if (new_path == path) { update(); return; }
   path = new_path;
   $("#path").text(path_to_text(path));
   last = path[path.length-1];
@@ -254,11 +253,12 @@ function update() {
       .attr("class", "node")
       .attr("cx", function(d) { console.log("NODE ENTERED!"); return d.x; })
       .attr("cy", function(d) { return d.y; })
-      .attr("r", function(d) { return Math.sqrt(d.size) / 10 || 4.5; })
+      .attr("r", function(d) { return 20+"px"; })
       .style("fill", color)
       .on("click", click)
       .call(force.drag);
       //.attr("r", function(d) { return 10+"px"; })
+      //.attr("r", function(d) { return Math.sqrt(d.size) / 10 || 4.5; })
 
   // Exit any old nodes.
   node.exit().remove();
