--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,7 +3,7 @@
 <head>
   <title>Tutorial</title>
   <%= stylesheet_link_tag    "application", "http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css", :media => "all" %>
-  <%= javascript_include_tag "application", "http://code.jquery.com/jquery-1.9.0.js", "http://code.jquery.com/ui/1.10.0/jquery-ui.js" %>
+  <%= javascript_include_tag "application", "http://code.jquery.com/jquery-1.9.0.js", "http://code.jquery.com/ui/1.10.0/jquery-ui.js", "http://mbostock.github.com/d3/d3.js?1.25.0" %>
   <%= csrf_meta_tags %>
 </head>
 <body>
