--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -51,8 +51,9 @@ var w = 960,
 var force = d3.layout.force() 
     .on("tick", tick)
     .size([w, h])
-    .charge(-100)
-    .linkDistance(50);
+    .friction(0.3)
+    //.charge(-100)
+    //.linkDistance(50);
     //.charge(-1000)
     //.linkStrength(function(d) { 
     //  for (var i=0; i<path.length; i+=1) {
