--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -262,8 +262,8 @@ function update() {
   var last_id = path[path.length-1].id,
       xxx = 0,
       yyy = 0;
-  for (var i=0; i<node.length; i+=1) {
-    if (node.id == last_id) {
+  for (var i=0; i<nodes.length; i+=1) {
+    if (nodes[i].id == last_id) {
       xxx = node.x;
       yyy = node.y;
       console.log("found nooooooooooooooooooodde!");
@@ -273,7 +273,7 @@ function update() {
   if (xxx == 0 && yyy == 0) {
     alert("ID not found for expansion!");
     xxx = Math.random()*w;
-    yyy = Math.random()*h
+    yyy = Math.random()*h;
   }
 
   // Enter any new nodes.
