--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -264,8 +264,8 @@ function update() {
       yyy = 0;
   for (var i=0; i<nodes.length; i+=1) {
     if (nodes[i].id == last_id) {
-      xxx = node.x;
-      yyy = node.y;
+      xxx = nodes[i].x;
+      yyy = nodes[i].y;
       console.log("found nooooooooooooooooooodde!");
       break;
     }
