--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -278,7 +278,7 @@ function update() {
 
   node.each(function(d) {
     var inPath = false;
-    for (int i=0; i<path.length; i+=1) {
+    for (var i=0; i<path.length; i+=1) {
       if (path[i].id == d.id) {
         inPath = true;
         break;
