--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -51,9 +51,10 @@ var w = 960,
 var force = d3.layout.force() 
     .on("tick", tick)
     .size([w, h])
-    .friction(0.8)
-    .charge(-1500)
-    .linkDistance(100);
+    .friction(0.9)
+    .charge(-3000)
+    .gravity(0.05)
+    .linkDistance(80);
     //.charge(-1000)
     //.linkStrength(function(d) { 
     //  for (var i=0; i<path.length; i+=1) {
@@ -282,7 +283,7 @@ function update() {
       .attr("class", "node")
       .attr("cx", function(d) { console.log("NODE ENTERED!"); return d.x; })
       .attr("cy", function(d) { return d.y; })
-      .attr("r", function(d) { return 20+"px"; })
+      .attr("r", function(d) { return 15+"px"; })
       .style("fill", color)
       .on("click", click)
       .call(force.drag);
