--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -14,12 +14,17 @@
 }
 circle.node {
   cursor: pointer;
-  stroke: #3182bd;
-  stroke-width: 1.5px;
+  /*stroke: #3182bd;*/
+  /*stroke-width: 1.5px;*/
 }
 
 line.link {
   fill: none;
-  stroke: #9ecae1;
-  stroke-width: 1.5px;
+  stroke: #888;
+  stroke-width: 2px;
+}
+
+.node text {
+  pointer-events: none;
+  font: 10px sans-serif;
 }
