--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -248,7 +248,7 @@ function update() {
   // Enter any new links.
   link.enter().insert("svg:line", ".node")
       .attr("class", "link")
-      .attr("x1", function(d) { console.log("LINK ENTERED!"); return d.source.x; })
+      .attr("x1", function(d) { return d.source.x; })
       .attr("y1", function(d) { return d.source.y; })
       .attr("x2", function(d) { return d.target.x; })
       .attr("y2", function(d) { return d.target.y; });
@@ -257,7 +257,7 @@ function update() {
   link.exit().remove();
 
   // Update the nodes…
-  node = vis.selectAll("circle.node")
+  node = vis.selectAll("g.node")
       .data(nodes, function(d) { console.log("Assigning id to node "+d.id); return d.id; })
       .style("fill", color);
 
@@ -279,16 +279,20 @@ function update() {
   }
 
   // Enter any new nodes.
-  node.enter().append("svg:circle")
-      .attr("class", "node")
-      .attr("cx", function(d) { console.log("NODE ENTERED!"); return d.x; })
+  node.enter().append("svg:g")
+              .attr("class","node")
+              .on("click", click)
+              .call(force.drag);
+              //.attr("transform", function(d) { return "translate(" + d.x + ","+ d.y + ")"; })
+
+  node.append("svg:circle")
+      .attr("cx", function(d) { return d.x; })
       .attr("cy", function(d) { return d.y; })
       .attr("r", function(d) { return 15+"px"; })
-      .style("fill", color)
-      .on("click", click)
-      .call(force.drag);
-      //.attr("r", function(d) { return 10+"px"; })
-      //.attr("r", function(d) { return Math.sqrt(d.size) / 10 || 4.5; })
+      .style("fill", color);
+
+  node.append("svg:text")
+      .text(function(d) { return d.name; });
 
   // Exit any old nodes.
   node.exit().remove();
@@ -330,8 +334,9 @@ function tick() {
       .attr("x2", function(d) { return d.target.x; })
       .attr("y2", function(d) { return d.target.y; });
 
-  node.attr("cx", function(d) { return d.x; })
-      .attr("cy", function(d) { return d.y; });
+  //node.attr("cx", function(d) { return d.x; })
+  //    .attr("cy", function(d) { return d.y; });
+  node.attr("transform", function(d) { return "translate(" + d.x + "," + d.y + ")"; });
 
 }
 
@@ -351,15 +356,6 @@ function color(d) {
 
 // Toggle children on click.
 function click(d) {
-  /*
-  if (d.children) {
-    d._children = d.children;
-    d.children = null;
-  } else {
-    d.children = d._children;
-    d._children = null;
-  }
-  */
   for (var i=0; i<path.length; i+=1) {
     if (d.id == path[i].id) {
       console.log("Clicked on something already in path");
