fix and rectangles

--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -17,6 +17,11 @@ circle.node {
   /*stroke: #3182bd;*/
   /*stroke-width: 1.5px;*/
 }
+rect.node {
+  cursor: pointer;
+  /*stroke: #3182bd;*/
+  /*stroke-width: 1.5px;*/
+}
 
 line.link {
   fill: none;
