--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -14,13 +14,13 @@
 }
 circle.node {
   cursor: pointer;
-  /*stroke: #3182bd;*/
-  /*stroke-width: 1.5px;*/
+  stroke: #3182bd;
+  stroke-width: 1.5px;
 }
 rect.node {
   cursor: pointer;
-  /*stroke: #3182bd;*/
-  /*stroke-width: 1.5px;*/
+  stroke: #3182bd;
+  stroke-width: 1.5px;
 }
 g.node {
   cursor: pointer;
