--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -288,7 +288,8 @@ function update() {
   node.filter(function(d) { return d.type == "person"; })
       .append("svg:circle")
       .attr("r", function(d) { return 20+"px"; })
-      .style("fill", color);
+      .style("fill", color)
+      .style("stroke", stroke_color);
       //.attr("cx", function(d) { return d.x; })
       //.attr("cy", function(d) { return d.y; })
 
@@ -298,7 +299,8 @@ function update() {
       .attr("y",-15)
       .attr("width",30)
       .attr("height",30)
-      .style("fill", color);
+      .style("fill", color)
+      .style("stroke", stroke_color);
       //.attr("cx", function(d) { return d.x; })
       //.attr("cy", function(d) { return d.y; })
 
@@ -355,7 +357,6 @@ function tick() {
 
 // Color leaf nodes orange, and packages white or blue.
 function color(d) {
-  //return d._children ? "#3182bd" : d.children ? "#c6dbef" : "#fd8d3c";
   for (var i=0; i<path.length-1; i+=1) {
     if (d.id == path[i].id) {
       return "#888888";
@@ -365,6 +366,18 @@ function color(d) {
     return "#3cfd8d";
   }
   return "#fd8d3c";
+}
+
+function stroke_color(d) {
+  for (var i=0; i<path.length-1; i+=1) {
+    if (d.id == path[i].id) {
+      return "#666666";
+    }
+  }
+  if (d.type == "person") {
+    return "#2ab162";
+  }
+  return "#b1622a";
 }
 
 // Toggle children on click.
