--- a/app/assets/stylesheets/graph.css.scss
+++ b/app/assets/stylesheets/graph.css.scss
@@ -15,12 +15,12 @@
 circle.node {
   cursor: pointer;
   //stroke: #3182bd;
-  //stroke-width: 1.5px;
+  stroke-width: 0px;
 }
 rect.node {
   cursor: pointer;
   //stroke: #3182bd;
-  //stroke-width: 1.5px;
+  stroke-width: 0px;
 }
 g.node {
   cursor: pointer;
