--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -357,7 +357,7 @@ function tick() {
 function color(d) {
   for (var i=0; i<path.length-1; i+=1) {
     if (d.id == path[i].id) {
-      return "#888888";
+      return "#AAAAAA";
     }
   }
   if (d.type == "person") {
