--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -288,7 +288,7 @@ function update() {
   enter_node.filter(function(d) { return d.type == "person"; })
       .append("svg:circle")
       .attr("r", function(d) { return 20+"px"; })
-      .style("fill", color)
+      .style("fill", color);
       //.attr("cx", function(d) { return d.x; })
       //.attr("cy", function(d) { return d.y; })
 
@@ -298,7 +298,7 @@ function update() {
       .attr("y",-15)
       .attr("width",30)
       .attr("height",30)
-      .style("fill", color)
+      .style("fill", color);
       //.attr("cx", function(d) { return d.x; })
       //.attr("cy", function(d) { return d.y; })
 
