--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -4,9 +4,9 @@
 <div id="details">
   <div id="inside_me"><!-- INSIDE ME -->
     <h1 class="detail_title">Me:</h1>
-    <%= form_tag do %>
+    <%= form_tag :datapush, :method => :post do %>
       <%= text_field_tag :new_category_name, 'Type name of category to add' %>
-      <%= submit_tag("Add") %>
+      <%= submit_tag "Add", :onclick => "return validateform()" %>
     <% end %>
     <ul>
     </ul>
@@ -14,9 +14,9 @@
   <!-- INSIDE ME CATEGORY -->
   <div id="inside_me_category">
     <h1 class="detail_title">Connections:</h1>
-    <%= form_tag do %>
+    <%= form_tag :datapush, :method => :post do %>
       <div class="ui-widget">
-        <%= text_field_tag :new_connection_name, 'Type name of person' %> <%= submit_tag("Connect") %>
+        <%= text_field_tag :new_connection_name, 'Type name of person' %> <%= submit_tag "Connect", :onclick => "return validateform()" %>
       </div>
     <% end %>
     <h3>My Connections:</h3>
