--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -6,7 +6,7 @@
     <h1 class="detail_title">Me:</h1>
     <%= form_tag :datapush, :id => "form_add_category", :method => :post do %>
       <%= text_field_tag :new_category_name, 'name of category' %>
-      <%= submit_tag "Add", :onclick => "return validateform()" %>
+      <%= submit_tag "Add", :id => "add_category_submit" %>
     <% end %>
     <ul>
     </ul>
@@ -16,7 +16,7 @@
     <h1 class="detail_title">Connections:</h1>
     <%= form_tag :datapush, :id => "form_add_connection", :method => :post do %>
       <div class="ui-widget">
-        <%= text_field_tag :new_connection_name, 'Type name of person' %> <%= submit_tag "Connect", :onclick => "return validateform()" %>
+        <%= text_field_tag :new_connection_name, 'Type name of person' %> <%= submit_tag "Connect", :id => "add_connection_submit" %>
       </div>
     <% end %>
     <h3>My Connections:</h3>
@@ -38,44 +38,33 @@
 </div>
 <script type="text/javascript">
 
-$('#form_add_category').submit(function() {  
-    var valuesToSubmit = $(this).serialize();
-    $.ajax({
-        url: $(this).attr('action'), //sumbits it to the given url of the form
-        data: valuesToSubmit,
-        dataType: "JSON" // you want a difference between normal and ajax-calls, and json is standard
-    }).success(function(json){
-      console.log("Category added to database successfully");
-      path_update(path);
-    }).fail(function(obj, textStatus, errorThrown ) {
-      alert( "Error" );
-      console.log("ERROR");
-      console.log(obj);
-      console.log(textStatus);
-      console.log(errorThrown);
-    }); 
-    return false; // prevents normal behaviour
+$('#add_category_submit').click(function(e) {
+  $('#form_add_category').submit(function() {  
+      var valuesToSubmit = $(this).serialize();
+      console.log("Values to submit");
+      console.log(valuesToSubmit);
+      $.ajax({
+          url: $(this).attr('action'), //sumbits it to the given url of the form
+          data: valuesToSubmit,
+          dataType: "JSON" // you want a difference between normal and ajax-calls, and json is standard
+      }).success(function(json){
+        console.log("Category added to database successfully");
+        path_update(path);
+      }).fail(function(obj, textStatus, errorThrown ) {
+        alert( "Error" );
+        console.log("ERROR");
+        console.log(obj);
+        console.log(textStatus);
+        console.log(errorThrown);
+      }); 
+      return false; // prevents normal behaviour
+  });
 });
-$('#form_add_connection').submit(function() {  
-/*
-    var valuesToSubmit = $(this).serialize();
-    $.ajax({
-        url: $(this).attr('action'), //sumbits it to the given url of the form
-        data: valuesToSubmit,
-        dataType: "JSON" // you want a difference between normal and ajax-calls, and json is standard
-    }).success(function(json){
-      console.log("Category added to database successfully");
-      path_update(path);
-    }).fail(function(obj, textStatus, errorThrown ) {
-      alert( "Error" );
-      console.log("ERROR");
-      console.log(obj);
-      console.log(textStatus);
-      console.log(errorThrown);
-    }); 
-*/
-    console.log("Adding new connections isn't ready yet!");
-    return false; // prevents normal behaviour
+$('#add_connection_submit').click(function(e) {
+  $('#form_add_connection').submit(function() {  
+      console.log("Adding new connections isn't ready yet!");
+      return false; // prevents normal behaviour
+  });
 });
 
 var w = 960,
