--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -63,7 +63,26 @@ $('#add_category_submit').click(function(e) {
 });
 $('#add_connection_submit').click(function(e) {
   $('#form_add_connection').submit(function() {  
-      console.log("Adding new connections isn't ready yet!");
+      var valuesToSubmit = $(this).serialize();
+      last = path[path.length-1]
+      valuesToSubmit += "&category="+last.name;
+      console.log("Values to submit");
+      console.log(valuesToSubmit);
+      $.ajax({
+          url: $(this).attr('action'), //sumbits it to the given url of the form
+          type: 'POST',
+          data: valuesToSubmit,
+          dataType: "JSON" // you want a difference between normal and ajax-calls, and json is standard
+      }).success(function(json){
+        console.log("Category added to database successfully");
+        path_update(path);
+      }).fail(function(obj, textStatus, errorThrown ) {
+        alert( "Error" );
+        console.log("ERROR");
+        console.log(obj);
+        console.log(textStatus);
+        console.log(errorThrown);
+      }); 
       return false; // prevents normal behaviour
   });
 });
