--- a/app/views/graph/index.html.erb
+++ b/app/views/graph/index.html.erb
@@ -65,7 +65,7 @@ $('#add_connection_submit').click(function(e) {
   $('#form_add_connection').submit(function() {  
       var valuesToSubmit = $(this).serializeArray();
       last = path[path.length-1]
-      valuesToSubmit.push({"category":last.name})
+      valuesToSubmit.push({"name":"category","value":last.name})
       console.log("Values to submit");
       console.log(valuesToSubmit);
       $.ajax({
